--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
    </script>
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-<link rel="stylesheet" href="xmen.css"
+<link rel="stylesheet" href="xmen.css">
 </head>
 <body>
 <main>
